pageable manager_service 9-11-24